# Blog-App

./: .gitattributes  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
activity-service/: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  catalog-info.yaml  docker-build-push.yaml  eks-deployment.yaml  pyproject.toml  requirements.txt  sonar-project.properties
activity-service/.github/workflows/: github_cd.yml  github_ci.yml  hotfix.yml
activity-service/app/: main.py
activity-service/app/config/: settings.py
activity-service/app/dependencies/: jwt_auth.py  logger.py
activity-service/app/events/: consumer.py
activity-service/app/exceptions/: error_factory.py  handler.py  service_errors.py
activity-service/app/middleware/: trace_middleware.py
activity-service/app/routers/: activity.py  sample.py
activity-service/app/telemetry/: config.py  single_entry_trace_processor.py
activity-service/scripts/: check-hotfix-needed.ps1
activity-service/tests/: conftest.py  test_authentication.py  test_sample.py  test_telemetry.py  test_trace_middleware.py
activity-service/tests/integration/: test_config.py
activity-service/tests/integration/features/: api_testing.feature  environment.py
activity-service/tests/integration/features/steps/: api_steps.py  auth_steps.py
activity-service/wheels/: itaap_python_utils-1.0.58-py3-none-any.whl
blog_app/: requirements.txt
blog_app/app/: config.py  main.py
blog_app/app/events/: producer.py
blog_app/app/services/: comment_service.py  post_service.py
